Fix margin of collapsed headers

--- a/extension/skin/classic/events.css
+++ b/extension/skin/classic/events.css
@@ -16,6 +16,7 @@
     position: relative;
     -moz-user-select: none;
     cursor: pointer;
+    margin-bottom: 2px;
 }
 
 .listenerInheritLabel {
